--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2907,6 +2907,14 @@ input, select, textarea {
 
 	}
 
+.projects-header {
+	display: flex;
+}	
+
+.duration {
+	margin-left: 71%;
+	color: #D6404A;
+}
 	/* .resume {
 		border: black 1px;
 		border-radius: 10px;
